--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,11 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
+  <!-- <div class="bottom-bar">
+    <a href="/home" class="btn">Home</a>
+    <a href="/profile" class="btn">Profile</a>
+    <a href="/settings" class="btn">Settings</a>
+    <a href="/logout" class="btn">Logout</a>
+  </div> -->
 </html>
 
